<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <!-- Top bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates_login"
            android:textColor="@color/black"
            app:icon="@drawable/updates_login"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_button"
            app:layout_constraintBottom_toBottomOf="@id/close_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Welcome Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"

                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/urbisspass"
                        android:contentDescription="@string/todo"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/welcome_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_text"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/about_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_urbispass_first_card"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_white"
                        android:layout_marginTop="12dp"/>

                    <!-- Register Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_or_log_in"
                        android:textColor="@color/red_color"
                        app:icon="@drawable/baseline_arrow_forward_ios_24"
                        app:iconTint="@color/red_color"
                        app:iconGravity="textEnd"
                        app:iconPadding="8dp"
                        app:iconSize="16dp"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_gravity="end" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- UrbisPass Cards Section -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/card_login"
                        android:contentDescription="@string/todo"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/urbispass_card"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manage_your_bucharest_transport_cards_check_validity_and_recharge_directly_from_your_phone"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginBottom="12dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLinkCards"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/add_or_link_cards"
                            android:textColor="@color/red_color"
                            app:icon="@drawable/link_card"
                            app:iconTint="@color/red_color"
                            app:iconGravity="textStart"
                            style="@style/Widget.Material3.Button.TextButton" />

                        <View
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnViewCards"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/see_card_list"
                            android:textColor="@color/red_color"
                            app:icon="@drawable/card_list"
                            app:iconTint="@color/red_color"
                            app:iconGravity="textStart"
                            style="@style/Widget.Material3.Button.TextButton" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/alertsCard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/alertsImageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/alerts_login"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/alerts_"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/alerts"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        app:layout_constraintStart_toEndOf="@id/alertsImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <!-- Admin Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_admin"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/admin_mode"
                android:textColor="@color/red_color"
                android:visibility="gone"
                app:iconGravity="textStart"
                app:iconTint="@color/red_color" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>