<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.CardListActivity"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/left_arrow"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/black" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:layout_marginTop="30dp"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_subscription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/membership"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/red_color"
            app:strokeWidth="1dp"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/card"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/red_color"
            app:strokeWidth="1dp"
            app:cornerRadius="12dp"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_list_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toggle_card_type"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="always"
        android:scrollbars="vertical" />


</androidx.constraintlayout.widget.ConstraintLayout>